[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Default_Make_a_normal_school_corridor_but_one_that_gives_the_f_1.jpg" type="Texture" id=1]
[ext_resource path="res://BandeirinhaBR-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://BandeirinhaEUA-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/deadfrog/Deadfrog Personal Use Only.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://script/Language.gd" type="Script" id=5]
[ext_resource path="res://themes/languageButton.tres" type="Theme" id=6]
[ext_resource path="res://scenes/transitionFadeOut.tscn" type="PackedScene" id=7]
[ext_resource path="res://blackWhite.tres" type="Material" id=8]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=5]
gradient = SubResource( 4 )
fill_to = Vector2( 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 60
outline_color = Color( 0.517647, 0.337255, 0.337255, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 42
font_data = ExtResource( 4 )

[node name="Language" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 6.0
margin_top = 100.0
margin_right = 6.0
margin_bottom = 223.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "SELECT LANGUAGE
"
align = 1

[node name="Label" type="Label" parent="Label"]
anchor_right = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = -2.0
margin_bottom = 121.0
custom_colors/font_color = Color( 0.956863, 0.105882, 0.105882, 1 )
custom_fonts/font = SubResource( 6 )
text = "SELECT LANGUAGE
"
align = 1

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LanguageBR" type="Button" parent="Buttons"]
margin_left = 210.0
margin_top = 164.0
margin_right = 447.0
margin_bottom = 395.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource( 6 )
action_mode = 0
icon = ExtResource( 2 )

[node name="LanguageEUA" type="Button" parent="Buttons"]
margin_left = 509.0
margin_top = 163.0
margin_right = 772.0
margin_bottom = 394.0
mouse_filter = 2
theme = ExtResource( 6 )
action_mode = 0
icon = ExtResource( 3 )
align = 0
icon_align = 1

[node name="Back" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 365.0
margin_top = 422.0
margin_right = 558.0
margin_bottom = 471.0
mouse_filter = 2
custom_colors/font_color_focus = Color( 0.854902, 0.227451, 0.14902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.854902, 0.227451, 0.14902, 1 )
custom_fonts/font = SubResource( 7 )
action_mode = 0
text = "BACK"

[node name="transitionFadeOut" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="Buttons/LanguageBR" to="." method="_on_LanguageBR_pressed"]
[connection signal="pressed" from="Buttons/LanguageEUA" to="." method="_on_LanguageEUA_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_Back_pressed"]
